добавил .с файл появилась ошибка

--- a/Objects/2_laba.htm
+++ b/Objects/2_laba.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\2_laba.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\2_laba.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Mon Oct 25 00:47:20 2021
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Mon Oct 25 10:35:44 2021
 <BR><P>
 <H3>Maximum Stack Usage =         36 bytes + Unknown(Functions without stacksize, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -239,13 +239,13 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__rt_entry_main
 </UL>
 
-<P><STRONG><a name="[1c]"></a>search_x</STRONG> (Thumb, 26 bytes, Stack size 8 bytes, main.o(i.search_x))
+<P><STRONG><a name="[1c]"></a>search_x</STRONG> (Thumb, 26 bytes, Stack size 8 bytes, functions.o(i.search_x))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = search_x
 </UL>
 <BR>[Called By]<UL><LI><a href="#[1b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ableev_lab_c
 </UL>
 
-<P><STRONG><a name="[1d]"></a>write</STRONG> (Thumb, 24 bytes, Stack size 12 bytes, main.o(i.write))
+<P><STRONG><a name="[1d]"></a>write</STRONG> (Thumb, 24 bytes, Stack size 12 bytes, functions.o(i.write))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = write
 </UL>
 <BR>[Called By]<UL><LI><a href="#[1b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ableev_lab_c
