--- a/Objects/2_laba.build_log.htm
+++ b/Objects/2_laba.build_log.htm
@@ -21,13 +21,23 @@ Target DLL:      UL2CM3.DLL V1.164.0.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-C:\Keil_v5\projects\git\DDnMP_sem2\2_laba.uvprojx
+C:\Keil_v5\projects\git\DDnMP_sem2_AbleevAV\2_laba.uvprojx
 Project File Date:  10/25/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-".\Objects\2_laba.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+functions.c(43): warning:  #1-D: last line of file ends without a newline
+  }
+main.c: 1 warning, 0 errors
+linking...
+.\Objects\2_laba.axf: Error: L6200E: Symbol search_x multiply defined (by functions.o and main.o).
+.\Objects\2_laba.axf: Error: L6200E: Symbol write multiply defined (by functions.o and main.o).
+Not enough information to list image symbols.
+Not enough information to list load addresses in the image map.
+Finished: 2 information, 0 warning and 2 error messages.
+".\Objects\2_laba.axf" - 2 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -40,6 +50,7 @@ Package Vendor: Keil
   C:\Users\Admin\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
+Target not created.
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
