--- a/Objects/2_laba.build_log.htm
+++ b/Objects/2_laba.build_log.htm
@@ -28,16 +28,14 @@ Project File Date:  10/25/2021
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling main.c...
-functions.c(43): warning:  #1-D: last line of file ends without a newline
-  }
-main.c: 1 warning, 0 errors
+functions.h(23): warning:  #223-D: function "search_x" declared implicitly
+      b = search_x(arr, size, n);
+functions.h(24): warning:  #223-D: function "write" declared implicitly
+      write (arr, size, out, b);
+main.c: 2 warnings, 0 errors
 linking...
-.\Objects\2_laba.axf: Error: L6200E: Symbol search_x multiply defined (by functions.o and main.o).
-.\Objects\2_laba.axf: Error: L6200E: Symbol write multiply defined (by functions.o and main.o).
-Not enough information to list image symbols.
-Not enough information to list load addresses in the image map.
-Finished: 2 information, 0 warning and 2 error messages.
-".\Objects\2_laba.axf" - 2 Error(s), 1 Warning(s).
+Program Size: Code=608 RO-data=40 RW-data=180 ZI-data=1996  
+".\Objects\2_laba.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +48,6 @@ Package Vendor: Keil
   C:\Users\Admin\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Target not created.
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
