--- a/Objects/DDnMP_laba_3_exemple.build_log.htm
+++ b/Objects/DDnMP_laba_3_exemple.build_log.htm
@@ -17,17 +17,23 @@ Library Manager: ArmAr.exe V5.06 update 7 (build 960)
 Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.35.0.2
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      UL2CM3.DLL V1.164.0.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-C:\Keil_v5\projects\git\DDnMP_sem2_AbleevAV\2_laba.uvprojx
-Project File Date:  10/25/2021
+C:\Keil_v5\projects\git\DDnMP_laba_3_AbleevAV\DDnMP_laba_3_exemple.uvprojx
+Project File Date:  11/16/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-".\Objects\2_laba.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+main.h(25): warning:  #1-D: last line of file ends without a newline
+  #define NVIC	((NVIC_Type*)NVIC_BASE)   /*!< NVIC configuration struct */
+main.c: 1 warning, 0 errors
+linking...
+Program Size: Code=792 RO-data=268 RW-data=4 ZI-data=1636  
+".\Objects\DDnMP_laba_3_exemple.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -40,7 +46,7 @@ Package Vendor: Keil
   C:\Users\Admin\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
