--- a/Objects/3.build_log.htm
+++ b/Objects/3.build_log.htm
@@ -21,20 +21,16 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-C:\Keil_v5\projects\3\3.1.uvprojx
-Project File Date:  11/22/2021
+C:\Keil_v5\projects\3.1\3.1.uvprojx
+Project File Date:  12/07/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
-main.c(103): warning: expression result unused [-Wunused-value]
-    RCC_DeInit;
-    ^~~~~~~~~~
-1 warning generated.
-compiling main.c...
+compiling functions.c...
 linking...
-Program Size: Code=1008 RO-data=252 RW-data=0 ZI-data=1632  
-".\Objects\3.1" - 0 Error(s), 1 Warning(s).
+Program Size: Code=1588 RO-data=252 RW-data=0 ZI-data=1632  
+".\Objects\3.1" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -61,11 +57,11 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: Keil::Device:Startup:1.0.0
-      Source file:   Device\Source\system_stm32f10x.c
-      Source file:   Device\Source\ARM\STM32F1xx_OPT.s
       Source file:   Device\Source\ARM\startup_stm32f10x_md.s
+      Source file:   Device\Source\system_stm32f10x.c
       Include file:  RTE_Driver\Config\RTE_Device.h
-Build Time Elapsed:  00:00:01
+      Source file:   Device\Source\ARM\STM32F1xx_OPT.s
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
