--- a/Objects/3.build_log.htm
+++ b/Objects/3.build_log.htm
@@ -21,15 +21,16 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-C:\Keil_v5\projects\3.1\3.1.uvprojx
-Project File Date:  12/07/2021
+C:\Keil_v5\projects\git\DDnMP_sem2_AbleevAV\3.1.uvprojx
+Project File Date:  12/17/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
+compiling main.c...
 compiling functions.c...
 linking...
-Program Size: Code=1588 RO-data=252 RW-data=0 ZI-data=1632  
+Program Size: Code=1712 RO-data=252 RW-data=0 ZI-data=1640  
 ".\Objects\3.1" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -57,10 +58,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.5.0
 
    * Component: Keil::Device:Startup:1.0.0
-      Source file:   Device\Source\ARM\startup_stm32f10x_md.s
-      Source file:   Device\Source\system_stm32f10x.c
-      Include file:  RTE_Driver\Config\RTE_Device.h
       Source file:   Device\Source\ARM\STM32F1xx_OPT.s
+      Source file:   Device\Source\ARM\startup_stm32f10x_md.s
+      Include file:  RTE_Driver\Config\RTE_Device.h
+      Source file:   Device\Source\system_stm32f10x.c
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
